      from Olivier Lahaye).
    * When generating RPMs, do not fail if files are installed but unpackaged
      (we copy some files we do not actually need).
    * Code clean-up.
    * Better rpm requirements processing msg09108 from Olivier LAHAYE
    * Fix scripts files enumeration so there a no missing files an no
      duplicate

0.6.0:
    * On Debian, put the scripts in the correct OPKG packages (correctly deal 
      with the part
    * The old "setup" script corresponds to "api-pot-install" and not 
      "api-pre-install", so i updated opkg-convert.
    * Move the files for the creation of binary packages directly into the
      source code (easier to maintain).

0.5.0:
    * Avoid warnings when using Python-2.6.
    * [Ticket #590] Correctly deal with the "rel" tag of config.xml files on 
      RPM based systems.

0.4.5:
	* Fix problem on Debian platforms:
		* Copy correctly the different files of the OPKG so the Debian
		packages are correclty created
		* Correctly generate the scripts of the Debian packages so the
		different scripts defined bu the OPKG API are actually executed when
		installing/removing the different Debian package of a given OPKG.
    * Fix a corner case issue when dealing with the OPKG scripts.

0.4.4:
	* Fix a problem on Debian when generating the .orig tarball. To avoid the
	problem we simply do not generate this tarball anymore.
	* [Ticket #552] Architecture tags are now correctly parsed and handled.

0.4.3:
	* [Ticket #537] If arch filters are specified in the config.xml file, we
	generate architecture dependent binary packages to avoid conflicts when
	different architectures have different dependencies.
	* [Ticket #533] The "output" option is now working on RPM based systems.
	* [Ticket #501] Correctly include the man page into the OPKGC RPM.

0.4.2:
	* [Ticket #534] On Debian based systems, scripts in the "scripts"
	directory of OPKGs are now included.

0.4.1